引用及类初始化